[package]
name = "examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tun = {version="0.7", features=["async"]} # Asynchronous tun
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
etherparse = { version = "0.18" }
# tokio-tun = {version = "0.13.2"}
# rtnetlink = { version = "0.16.0"}


[[example]]
name = "tun"
path = "tun/tun.rs"


[[example]]
name = "tun-bridge"
path = "tun-bridge/tun.rs"

[[example]]
name = "tun-route"
path = "tun-route/tun.rs"
